--- a/group430/Korolev/Lab5_Korolev.ipynb
+++ b/group430/Korolev/Lab5_Korolev.ipynb
@@ -56,11 +56,11 @@
     "\n",
     "Из первого уравнения системы следует, что:\n",
     "\n",
-    "$$L_2=-\\frac{с_1}{d_1}, M_2=\\frac{b_1}{d_1}$$\n",
+    "$$L_2=-\\frac{c_1}{d_1}, M_2=\\frac{b_1}{d_1}$$\n",
     "\n",
     "рекуррентные соотношения:\n",
     "\n",
-    "$$L_{i+1}=-\\frac{с_i}{d_i+a_iL_i}, M_{i+1}=\\frac{b_i-M_ia_i}{d_i+a_iL_i},i=2,3,...,n-1 $$\n",
+    "$$L_{i+1}=-\\frac{c_i}{d_i+a_iL_i}, M_{i+1}=\\frac{b_i-M_ia_i}{d_i+a_iL_i},i=2,3,...,n-1 $$\n",
     "\n",
     "Из последнего уравнения системы и соотношения (1) для i=n находим:\n",
     "\n",
