--- a/group430/Korolev/Lab6_Korolev.ipynb
+++ b/group430/Korolev/Lab6_Korolev.ipynb
@@ -31,28 +31,28 @@
     "Рассмотрим задачу нахождения безусловного минимума функции\n",
     "f(x) векторного аргумента $x = ${$x_1, x_2, ..., x_n$}, заданной на всем\n",
     "пространстве $R^n$, символически записываемую в виде\n",
-    "$$f(x) → min, x ∈ R^n. (1)$$\n",
-    "Напомним, что точка $ ¯x$ называется точкой локального минимума в\n",
-    "задаче, если существует число ϵ > 0 такое, что для всех x удовлетворяющих условию $ ∥x− ¯x∥ ≤ ϵ$, выполнено неравенство $f(x)≥f(¯x)$; здесь и далее$∥x∥=${$x^2_1+. . .+x^2_n$}$^{\\frac{1}{2}}$.\n",
-    "Точка x называется точкой глобального минимума в задаче (1), если $f(¯x) ≤ f(x)$, x ∈ $R^n.$\n",
+    "$$f(x)-min, x in R^n. (1)$$\n",
+    "Напомним, что точка $ x*$ называется точкой локального минимума в\n",
+    "задаче, если существует число ϵ > 0 такое, что для всех x удовлетворяющих условию  $||x−x*||$ \leq ϵ, выполнено неравенство $f(x) \geq f(x*)$; здесь и далее $||x||=${$x^2_1+. . .+x^2_n$}$^{\\frac{1}{2}}$.\n",
+    "Точка x называется точкой глобального минимума в задаче (1), если $f(x*) \leq f(x)$, x in $R^n.$\n",
     "Для численного решения задачи (1) обычно строят некоторую\n",
-    "последовательность векторов {$x^k$}$_{k=0}^∞ $, обрывая процесс построения\n",
+    "последовательность векторов {$x^k$}$_{k=0}^\infty $, обрывая процесс построения\n",
     "тогда, когда появляется уверенность, что последний из постренных\n",
     "элементов последовательности близок к точке минимума в том или\n",
     "ином смысле. Например, если элемент $x^k$ удовлетворяет неравен\n",
-    "ству $ ∥x^k −¯x∥ < δ$, где x- точка минимума в задаче (1), δ- некоторое\n",
+    "ству $||x^k −x*|| \leq $ δ, где x- точка минимума в задаче (1), δ- некоторое\n",
     "положительное число, то говорят, что $x^k$ есть приближенное реше\n",
     "ние задачи (1) с точностью δ по аргументу. Если же выполняется\n",
-    "неравенство $ |f(x^k) − ¯f| < ¯δ$, где $¯f$- минимальное значение функции\n",
+    "неравенство $ |f(x^k) − f*| \leq $ δ, где $f*$- минимальное значение функции\n",
     "f(x) в $R^n$, то говорят, что число $f(x^k)$ дает приближенное решение\n",
     "задачи (1) с точностью $ ¯δ$ по функции.\n",
     "Большинство процессов, используемых для приближенного реше\n",
     "ния задачи (1) можно представить как итерационные в виде\n",
-    "$$x^{k+1} = x^k + α_kp^k, (2)$$\n",
+    "$$x^{k+1} = x^k + a_kp^k, (2)$$\n",
     "где $p^k$ - вектор, определяющий направление движения от точки $x^k$\n",
-    "к точке $x^{k+1}$, $α_k$ - числовой множитель, величина которого задает\n",
+    "к точке $x^{k+1}$, $a_k$ - числовой множитель, величина которого задает\n",
     "длину шага в направлении $p^k$. В различных итерационных процес\n",
-    "сах типа (2) для нахождения $α_k$ и $p^k$ привлекаются различные све\n",
+    "сах типа (2) для нахождения $a_k$ и $p^k$ привлекаются различные све\n",
     "дения о минимизируемой функции f(x). Процессы, использующие\n",
     "для этого только значения самой функции, называются процесса\n",
     "ми нулевого порядка или методами поиска. Процессы, требующие\n",
@@ -68,15 +68,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Метод сопряженных градиентов. В этом методе $α_k$ выбирается, как и в методе наискорейшего спуска, из условия\n",
-    "$$ f(x^k + α_kp^k) = min_{α>0} f(x^k + αp^k) $$\n",
+    "Метод сопряженных градиентов. В этом методе $a_k$ выбирается, как и в методе наискорейшего спуска, из условия\n",
+    "$$ f(x^k + a_kp^k) = min_{a>0} f(x^k + ap^k) $$\n",
     "При этом вектор $p^k$ зависит не только от\n",
     "градиента функции $f(x^k)$, но и от градиента в предыдущей точке\n",
-    "$∇f(x^{k−1})$ (т.е. метод является двухшаговым), и строится по\n",
+    "$\nabla f(x^{k−1})$ (т.е. метод является двухшаговым), и строится по\n",
     "правилу\n",
-    "$$ p^k=−∇f(x^k) + β_kp^{k−1} $$\n",
+    "$$ p^k=−\nabla f(x^k) + b_kp^{k−1} $$\n",
     "\n",
-    "$$ β_0 = 0, β_k = \\frac{(∇f(x^k);∇f(x^k)−∇f(x^{k-1}))}{∥∇f(x^{k-1})∥^2}\n",
+    "$$ b_0 = 0, b_k = \\frac{(\nabla f(x^k);\nabla f(x^k)−\nabla f(x^{k-1}))}{||\nabla f(x^{k-1})||^2}\n",
     " , k = 1, 2, . . . ; $$"
    ]
   },
